--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <header>
         <div class="zatemnenie1">
             <!-- Обычные кнопки для десктопа -->
-            <button class="desktop-btn"><a href="uslugi.html">Ослеживание <br> ремонта</a></button>
-            <button class="desktop-btn">Услуги</button>
-            <button class="desktop-btn">О комании</button>
+            <button class="desktop-btn"><a href="SostRem.html">Ослеживание <br> ремонта</a></button>
+            <button class="desktop-btn"><a href="uslugi.html"></a>Услуги</button>
             <button class="desktop-btn">Контакты</button>
             <button class="desktop-btn2">Заказать звонок</button>
             <!-- Бургер кнопка для мобильных -->
