--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <button class="burger-btn">☰</button>
             <!-- Список элементов меню -->
             <ul class="menu-items">
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">О комании</a></li>
+                <li><a href="uslugi.html">Услуги</a></a></li>
+                <li><a href="SostRem.html">Отслеживание ремонта</a></a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
         </div>
