--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
         <div class="grid-container">
             <div class="image-container">
                 <img src="Ремонт ноутбуков.png" alt="Image 1" class="image" />
-                <button class="button">Кнопка 1</button>
+                <button class="button"><a href="uslugi.html">Ремонт ноутбуков</a></button>
             </div>
             <div class="image-container">
                 <img src="Ремонт плоттеров.png" alt="Image 2" class="image" />
-                <button class="button">Кнопка 2</button>
+                <button class="button"><a href="uslugi.html">Ремонт принтеров</a></button>
             </div>
             <div class="image-container">
                 <img src="Ремонт принтеров.png" alt="Image 3" class="image" />
-                <button class="button">Кнопка 3</button>
+                <button class="button"><a href="uslugi.html">Ремонт плоттеров</a></button>
             </div>
         </div>
     </div>
