--- a/uslugi.html
+++ b/uslugi.html
@@ -12,17 +12,16 @@
     <header>
         <div class="zatemnenie1">
             <!-- Обычные кнопки для десктопа -->
-            <button class="desktop-btn">Ослеживание <br> ремонта</button>
-            <button class="desktop-btn">Услуги</button>
-            <button class="desktop-btn">О комании</button>
+            <button class="desktop-btn"><a href="index.html">Главная</a></button>
+            <button class="desktop-btn"><a href="SostRem.html">Ослеживание <br> ремонта</a></button>
             <button class="desktop-btn">Контакты</button>
             <button class="desktop-btn2">Заказать звонок</button>
             <!-- Бургер кнопка для мобильных -->
             <button class="burger-btn">☰</button>
             <!-- Список элементов меню -->
             <ul class="menu-items">
-                <li><a href="#">Пункт 1</a></li>
-                <li><a href="#">Пункт 2</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="SostRem.html">Состояние ремонта</a></li>
                 <li><a href="#">Пункт 3</a></li>
             </ul>
         </div>
