--- a/SostRem.html
+++ b/SostRem.html
@@ -14,8 +14,8 @@
             <!-- Обычные кнопки для десктопа -->
             <button class="desktop-btn"><a href="index.html">Главная</a></button>
             <button class="desktop-btn"><a href="uslugi.html">Услуги</a></button>
-            <button class="desktop-btn">Контакты</button>
-            <button class="desktop-btn2">Заказать звонок</button>
+            <button class="desktop-btn"><a href="Contact.html">Контакты</a></button>
+            <button class="desktop-btn2"><a href="Contact.html">Заказать звонок</a></button>
             <!-- Бургер кнопка для мобильных -->
             <button class="burger-btn">☰</button>
             <!-- Список элементов меню -->
