--- a/uslugi.html
+++ b/uslugi.html
@@ -14,8 +14,8 @@
             <!-- Обычные кнопки для десктопа -->
             <button class="desktop-btn"><a href="index.html">Главная</a></button>
             <button class="desktop-btn"><a href="SostRem.html">Ослеживание <br> ремонта</a></button>
-            <button class="desktop-btn">Контакты</button>
-            <button class="desktop-btn2">Заказать звонок</button>
+            <button class="desktop-btn"><a href="Contact.html">Контакты</a></button>
+            <button class="desktop-btn2"><a href="Contact.html">Заказать звонок</a></button>
             <!-- Бургер кнопка для мобильных -->
             <button class="burger-btn">☰</button>
             <!-- Список элементов меню -->
@@ -82,7 +82,7 @@
                 <p>ВЫЕЗД СПЕЦИАЛИСТА!<br><br>ООО "БелХард Сервис" предлагает платную услугу по выезду инженера к Заказчику (действует в пределах Минска). Инженеры нашей компании готовы выехать на Ваш объект для консультации и решения задач в области ремонта техники HP. Предложение действительно для юридических лиц.</p>
             </div>
         </div>
-        <div class="but1"><button class="contact">Задать вопрос</button></div>
+        <div class="but1"><button class="contact"><a href="Contact.html">Задать вопрос</a></button></div>
         
     </div>
     <footer>
