--- a/uslugi.html
+++ b/uslugi.html
@@ -22,7 +22,7 @@
             <ul class="menu-items">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="SostRem.html">Состояние ремонта</a></li>
-                <li><a href="#">Пункт 3</a></li>
+                <<li><a href="Contact.html">Контакты</a></li>
             </ul>
         </div>
 
