--- a/SostRem.html
+++ b/SostRem.html
@@ -22,7 +22,7 @@
             <ul class="menu-items">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="uslugi.html">Услуги</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="Contact.html">Контакты</a></li>
             </ul>
         </div>
 
