--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="menu-items">
                 <li><a href="uslugi.html">Услуги</a></a></li>
                 <li><a href="SostRem.html">Отслеживание ремонта</a></a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="Contact.html">Контакты</a></li>
             </ul>
         </div>
 
