--- a/Contact.html
+++ b/Contact.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Contact.css">
+    <link rel="stylesheet" href="CSS/Contact.css">
 </head>
-
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 <body>
     <header>
         <div class="zatemnenie1">
@@ -48,7 +50,7 @@
     </header>
 
     <div class="BackgroundPhoto">
-        <img src="Лого.png" alt="">
+        <img src="Media/Лого.png" alt="">
 
     </div>
     <div class="nadpisi">
@@ -101,7 +103,7 @@
                             </svg>
 
                         </span>
-                        <span class="info">г. Минск, ст.м. Первомайская, ул. Бобруйская 21</span>
+                        <span class="info">9-18 Пн-пт, Сб-Вс: вых</span>
                     </div>
 
                 </div>
@@ -117,7 +119,7 @@
         <footer>
             <div class="zatemnenie">
 
-                <img src="Лого.png" alt="">
+                <img src="Media/Лого.png" alt="">
 
             </div>
 
