--- a/uslugi.html
+++ b/uslugi.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="uslugi.css">
+    <link rel="stylesheet" href="CSS/uslugi.css">
 </head>
-
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 <body>
     <header>
         <div class="zatemnenie1">
@@ -47,38 +49,38 @@
         </script>
     </header>
     <div class="BackgroundPhoto">
-        <img src="Лого.png" alt="">
+        <img src="Media/Лого.png" alt="">
 
     </div>
     <div class="uslugi">
         <p>uslugi</p>
         <div class="grid-container-uslugi">
             <div class="grid-item-uslugi">
-                <img src="comp1 1.png" alt="Image 1" class="comp1">
+                <img src="Media/comp1 1.png" alt="Image 1" class="comp1">
                 <p>Персональные компьютерные системы (компьютеры, Commercial и Consumer ноутбуки и профессиональные рабочие станции).</p>
             </div>
             <div class="grid-item-uslugi">
-                <img src="lazer 1.png" alt="Image 2">
-                <p>Системы печати и обработки изображения (LaserJet принтеры, включая черно-белые и цветные LaserJet принтеры, многофункциональные устройства).2</p>
+                <img src="Media/lazer 1.png" alt="Image 2">
+                <p>Системы печати и обработки изображения (LaserJet принтеры, включая черно-белые и цветные LaserJet принтеры, многофункциональные устройства).</p>
             </div>
             <div class="grid-item-uslugi">
-                <img src="enny 2.png" alt="Image 3">
+                <img src="Media/enny 2.png" alt="Image 3">
                 <p>Системы печати и обработки изображения (струйные принтеры, струйные многофункциональные устройства, сканеры и принтеры Photosmart).</p>
             </div>
             <div class="grid-item-uslugi">
-                <img src="design 1.png" alt="Image 3">
+                <img src="Media/design 1.png" alt="Image 3">
                 <p>Принтер с возможностью печатать на листах «широких» форматов, таких как А1, А2 и А3.</p>
             </div>
         </div>
         <p class="nazvanie">Компания также предлагает</p>
         <div class="grid-container-comp-pred">
             <div class="grid-item-comp-pred">
-                <img src="Человечек.png" alt="Image 1">
+                <img src="Media/Человечек.png" alt="Image 1">
                 <p>БЕСПЛАТНУЮ ДИАГНОСТИКУ!<br><br>
                     Поможем с выявлением неисправности бесплатно!</p>
             </div>
             <div class="grid-item-comp-pred">
-                <img src="Ноут 1.png" alt="Image 2">
+                <img src="Media/Ноут 1.png" alt="Image 2">
                 <p>ВЫЕЗД СПЕЦИАЛИСТА!<br><br>ООО "БелХард Сервис" предлагает платную услугу по выезду инженера к Заказчику (действует в пределах Минска). Инженеры нашей компании готовы выехать на Ваш объект для консультации и решения задач в области ремонта техники HP. Предложение действительно для юридических лиц.</p>
             </div>
         </div>
@@ -88,7 +90,7 @@
     <footer>
         <div class="zatemnenie">
             
-          <img src="Лого.png" alt="">
+          <img src="Media/Лого.png" alt="">
           
         </div>
 
